<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include layout="@layout/ui_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarSize="@dimen/dp_10"
        android:scrollbarThumbVertical="@drawable/scrollbar_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textTitle"
                    android:textColor="@color/colorWhite"
                    android:textSize="28sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/textDetails"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/buttonstylepink"
                        android:text="@string/learnmore"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/buttonstyle2"
                        android:text="@string/jointheclube"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_15"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_profile_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/FirstName"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_profile_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/LastName"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/EmailSingup"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_profile_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/et_profile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_smartphone_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/Phone"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/btn_profile_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@drawable/buttonstylepink"
                    android:text="@string/update"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>