<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_base" />

    <include layout="@layout/ui_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="@string/textTitle"
                    android:textColor="@color/colorWhite"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginTop="10dp"
                    android:text="@string/textDetails"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_7"
                    android:layout_marginRight="@dimen/dp_7"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/buttonstylepink"
                        android:text="@string/learnmore"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/buttonstyle2"
                        android:text="@string/jointheclube"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_signup_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/FirstName"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_signup_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/LastName"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/EmailSingup"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/et_signup_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/et_signup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_smartphone_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/Phone"
                    android:inputType="phone" />

                <LinearLayout
                    android:id="@+id/ll_card_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/title_signup_pay"
                        android:textColor="@color/color_grey_600"
                        android:textSize="@dimen/sp_18"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rg_signup_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="@dimen/dp_3">

                        <RadioButton
                            android:id="@+id/rb_one_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:checked="true"
                            android:text="@string/radio_one"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rb_thirty_days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:text="@string/radio_two"
                            android:textSize="16sp" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="10dp"
                        android:text="Card Information:"
                        android:textColor="@color/color_grey_600"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.stripe.android.view.CardMultilineWidget
                        android:id="@+id/card_multiline_widget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:shouldShowPostalCode="true" />

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/cb_sign_up_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/title_checkbox_terms"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:buttonTint="@color/colorPrimary" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_user_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/buttonstylepink"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_user_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_15"
                    android:text="@string/txt_login_here"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>